--- a/index.html
+++ b/index.html
@@ -1,59 +1,146 @@
-let $bc = document.getElementById('battery-connect');
-let $msg = document.getElementById('msgalert');
-let rawDataElement = document.getElementById('rawDataDisplay');
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-$bc.onclick = (e) => {
-    e.preventDefault();
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    (async function() {
-        try {
-            let device;
-            if (navigator.userAgent.toLowerCase().includes('bluefy')) {
-                device = await navigator.bluetooth.requestDevice({
-                    filters: [{ services: [0xFFD0] }]
-                });
-            } else {
-                device = await navigator.bluetooth.requestDevice({
-                    filters: [{ services: [0xFFD0] }],
-                    optionalServices: [0xFFF0]
-                });
-            }
-            let server = await device.gatt.connect();
-
-            let rxService = await server.getPrimaryService(0xFFD0);
-            let rxCharacteristic = await rxService.getCharacteristic(0xFFD1);
-
-            let txService = await server.getPrimaryService(0xFFF0);
-            let txCharacteristic = await txService.getCharacteristic(0xFFF1);
-            await txCharacteristic.startNotifications();
-
-            let requestType = '';
-            txCharacteristic.addEventListener('characteristicvaluechanged', (event) => {
-                try {
-                    const packet = event.target.value;
-                    const payload = new DataView(packet.buffer, 3);
-                    const rawData = new Uint8Array(packet.buffer);
-
-                    // Display raw data in the textarea
-                    rawDataElement.value = Array.from(rawData).map(byte => byte.toString(16).padStart(2, '0')).join(' ');
-
-                    if (requestType === 'getTemps') {
-                        // Logic for 'getTemps'
-                    } else if (requestType === 'getLevels') {
-                        // Logic for 'getLevels'
-                    } else if (requestType === 'getCellVolts') {
-                        // Logic for 'getCellVolts'
-                    }
-                } catch (error) {
-                    console.error(error);
-                }
-
-                requestType = '';
-            });
-        } catch (err) {
-            console.error(err);
-            $msg.style.display = 'block';
-            $msg.innerHTML = err;
+    <title>Bluetooth Raw Data</title>
+    <style>
+        body {
+            background-color: #484848;
         }
-    })();
-};
+
+        h1 {
+            color: white;
+            text-align: center;
+            font-weight: bold;
+        }
+
+        .text-contrast {
+            color: white;
+        }
+
+        .form-control:disabled, .form-control[readonly] {
+            background-color: #fff;
+            opacity: 1;
+        }
+        .input-group-text {
+            width: 160px;
+        }
+        .timestamp {
+            font-size: 0.8em;
+        }
+        #myProgress {
+            background-color: white;
+            border-radius: 5px;
+            margin-bottom: 15px;
+        }
+
+        #myProgress > span {
+            padding: 5px;
+        }
+
+        #myBar {
+            width: 0%;
+            padding: 10px;
+            background-color: #04AA6D;
+            text-align: center;
+            color: white;
+            border-radius: 0px 0px 0px 5px;
+        }
+
+        a {
+            color: #03a0fd
+        }
+    </style>
+  </head>
+  <body>
+    <div class="container">
+        <h1>Bluetooth Raw Data</h1>
+
+        <!-- Display Raw Data -->
+        <div class="mb-3">
+            <label class="form-label text-contrast">Raw Bluetooth Data</label>
+            <textarea class="form-control" id="rawDataDisplay" rows="3" readonly></textarea>
+        </div>
+
+        <div id="battery-connect-container" class="container" style="padding-bottom: 20px">
+            <button id="battery-connect" class="btn btn-primary">Connect</button>
+            <div class="text-contrast">(Chrome only)</div>
+        </div>
+
+        <div class="container">
+            <div id="myProgress">
+                <span>Charge Level</span>
+                <div id="myBar">-</div>
+            </div>
+
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="watts">Watts</span>
+                <input type="text" class="form-control" id="watts-form" aria-describedby="watts" disabled="true">
+            </div>
+
+            <!-- Existing Fields -->
+            <div class="input-group mb-3">
+                <span class="input-group-text" id="state">Charge State</span>
+                <input type="text" class="form-control" id="state-form" aria-describedby="state" disabled="true">
+            </div>
+            <!-- Add more fields if necessary -->
+            <div id="listContainer"></div>
+        </div>
+
+        <footer class="footer mt-3">
+            <div class="container">
+              <span class="small text-contrast">Bluetooth Data App is hosted on Github.</span><br />
+            </div>
+        </footer>
+    </div>
+
+    <script>
+        function timeout(ms) {
+            return new Promise(resolve => setTimeout(resolve, ms));
+        }
+
+        let rawDataElement = document.getElementById('rawDataDisplay');
+        let $bc = document.getElementById('battery-connect');
+        let $msg = document.getElementById('msgalert');
+
+        $bc.onclick = (e) => {
+            e.preventDefault();
+
+            (async function() {
+                try {
+                    let device = await navigator.bluetooth.requestDevice({
+                        filters: [{ services: [0xFFD0] }],
+                        optionalServices: [0xFFF0]
+                    });
+                    let server = await device.gatt.connect();
+
+                    let rxService = await server.getPrimaryService(0xFFD0);
+                    let rxCharacteristic = await rxService.getCharacteristic(0xFFD1);
+
+                    let txService = await server.getPrimaryService(0xFFF0);
+                    let txCharacteristic = await txService.getCharacteristic(0xFFF1);
+                    await txCharacteristic.startNotifications();
+
+                    txCharacteristic.addEventListener('characteristicvaluechanged', (event) => {
+                        const packet = event.target.value;
+                        const rawData = new Uint8Array(packet.buffer);
+                        
+                        // Display raw data in hex format
+                        rawDataElement.value = Array.from(rawData).map(byte => byte.toString(16).padStart(2, '0')).join(' ');
+                    });
+                } catch (err) {
+                    console.error(err);
+                    $msg.style.display = 'block';
+                    $msg.innerHTML = err;
+                }
+            })();
+        };
+    </script>
+  </body>
+</html>
